--- a/4102029009/css/styles.css
+++ b/4102029009/css/styles.css
@@ -5,9 +5,28 @@ body {
 	background-position: center;
 	background-size: cover;
 }
+h1{
+	border-style: dotted;
+	margin-left:20%;
+	margin-right:20%;
+	color :red;
+}
 h3{
 	border-style: solid;
 	margin-left:20%;
 	margin-right:20%;
 	color :red;
+}
+td{
+	color:green;
+	font-size:20px;
+}
+p{
+	color:orange;
+	font-size:30px;
+	font-family:DFKai-sb;
+	
+}
+#display,#quinntb,#jaycetb,#bt,p{
+	display:none;
 }
